played with the html and css stylings

--- a/SCSS/css/main.css
+++ b/SCSS/css/main.css
@@ -1,2 +1,13 @@
-h1 {
-  color: blue; }
+marquee {
+  color: blue;
+  font-size: 50em;
+  text-align: center; }
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: lightblue;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 100%; }
