--- a/XML:HTTP/main.css
+++ b/XML:HTTP/main.css
@@ -1,5 +1,7 @@
 body {
     background-color: black;
+    margin: 0;
+    padding: 0;
 }
 
 #card-container {
@@ -10,6 +12,16 @@ body {
 
 .card {
     margin: 2em;
+    display: inline;
+    padding: .1em;
+    border: 5px solid blue;
+}
+
+.card2 {
+    margin: 4em;
+    display: inline;
+    padding: .1em;
+    border: 5px solid red;
 }
 
 .drawCard {
@@ -17,9 +29,69 @@ body {
     padding: 1.5em;
     margin: 0 auto;
     margin-top: 7em;
-    background-color: orange;
-    border: 1px solid orange;
+    background-color: yellow;
+    border: 1px solid yellow;
     border-radius: 5px;
     outline: none;
     font-size: 1em;
+    text-decoration: none;
+    color: black;
+    width: auto;
+    text-align: center;
+}
+
+h1 {
+    color: white;
+    text-align:  center;
+    font-family: 'Righteous', cursive;
+}
+
+.link {
+    width: 6%;
+}
+
+.back {
+    position: absolute;
+    left: 2em;
+    width: 6%;
+    background-color: yellow;
+    border: 1px solid yellow;
+    border-radius: 5px;
+    outline: none;
+    font-size: .5em;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    padding: .8em;
+    font-weight: 400;
+}
+
+.content{
+    display: flex;
+    margin: 0 auto;
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.addCard {
+    display: block;
+    padding: 1.5em;
+    margin: 0 auto;
+    margin-bottom: 5em;
+    background-color: yellow;
+    border: 1px solid yellow;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1em;
+    text-decoration: none;
+    color: black;
+    width: auto;
+    text-align: center;
+    display: none;
+}
+
+.one-player-two {
+    margin-top: 9.25em;
 }
