working with making own components and generating components

--- a/sample-app/src/app/app.component.html
+++ b/sample-app/src/app/app.component.html
@@ -18,4 +18,11 @@
   </li>
 </ul>
 
+<cbc-sample></cbc-sample>
+<cbc-sample></cbc-sample>
+<cbc-sample></cbc-sample>
+<cbc-sample></cbc-sample>
+<cbc-sample-two></cbc-sample-two>
+
+
 <router-outlet></router-outlet>
