changed up the components

--- a/sample-app/src/app/sample/sample.component.html
+++ b/sample-app/src/app/sample/sample.component.html
@@ -1,1 +1,5 @@
-<h1>This is my component</h1>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Star Wars App</span>
+  </mat-toolbar-row>
+</mat-toolbar>
